--- a/serialet.html
+++ b/serialet.html
@@ -173,7 +173,9 @@
                 <p>HD | 2019</p>
                 <p>Romance/Drama/Komedi</p>
                 <p>Rating: 6.9 | 3 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="emilyinparis.html"></a>
+                    <i class="fas fa-play play-icon"></i>
+                </a>
             </div>
         </div>
         <div class="card">
@@ -223,8 +225,8 @@
             <img style="height: 300px;" src="img/reklama3.png" alt="">
         </div>    
         </marquee>    
-            </div>   
-        </div>
+     </div>   
+    </div>
         
 
 
