--- a/serialet.html
+++ b/serialet.html
@@ -98,7 +98,7 @@
                 <p>HD | 2021</p>
                 <p>Action/Survival/Drama</p>
                 <p>Rating: 8/10 | 1 season</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="SquidGame.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
 
@@ -109,7 +109,7 @@
                 <p>HD | 2014</p>
                 <p>Action/Drama</p>
                 <p>Rating: 7.5 | 4 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="Flash.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
 
@@ -120,7 +120,7 @@
                 <p>HD | 2016</p>
                 <p>Action/Adventure/Western</p>
                 <p>Rating: 7.1 | 3 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="Frontier.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
 
@@ -131,7 +131,7 @@
                 <p>HD | 2010</p>
                 <p>Action/Drama/Horror</p>
                 <p>Rating: 8.1 | 11 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="WalkingD.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
 
@@ -142,7 +142,7 @@
                 <p>HD | 2019</p>
                 <p>Action/Drama/Science fantasy</p>
                 <p>Rating: 7.9 | 11 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="Umbrella.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
 
@@ -153,7 +153,7 @@
                 <p>HD | 2020</p>
                 <p>Romance/Drama/Alternate history</p>
                 <p>Rating: 7.4 | 3 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="Bridgerton.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
         <div class="card">
@@ -163,7 +163,7 @@
                 <p>HD | 2019</p>
                 <p>Aksion/Drama/Aventure</p>
                 <p>Rating: 8.0 | 3 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="https://www.youtube.com/watch?v=ndl1W4ltcmg&ab_channel=Netflix" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
         <div class="card">
@@ -173,7 +173,7 @@
                 <p>HD | 2019</p>
                 <p>Romance/Drama/Komedi</p>
                 <p>Rating: 6.9 | 3 seasons</p>
-                <a href="emilyinparis.html"></a>
+                <a href="emilyinparis.html">
                     <i class="fas fa-play play-icon"></i>
                 </a>
             </div>
@@ -185,17 +185,17 @@
                 <p>HD | 2016</p>
                 <p>Fantazi/Drama/Horror</p>
                 <p>Rating: 8.6 | 4 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="https://www.youtube.com/watch?v=b9EkMc79ZSU&ab_channel=Netflix" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
         <div class="card">
             <img src="img/s13.jpg" >
             <div class="details">
-                <h3>Quenns Gambit</h3>
+                <h3>Queen's Gambit</h3>
                 <p>HD | 2016</p>
                 <p>Fantazi/Drama/Horror</p>
                 <p>Rating: 8.6 | 4 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="https://www.youtube.com/watch?v=oZn3qSgmLqI&ab_channel=RottenTomatoesTV" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
         <div class="card">
@@ -205,7 +205,7 @@
                 <p>HD | 2016</p>
                 <p>Fantazi/Drama/Horror</p>
                 <p>Rating: 8.6 | 4 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="https://www.youtube.com/watch?v=uk_hFfUFXh4&ab_channel=ZeroMedia" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
         <div class="card">
@@ -215,7 +215,7 @@
                 <p>HD | 2016</p>
                 <p>Fantazi/Drama/Horror</p>
                 <p>Rating: 8.6 | 4 seasons</p>
-                <i class="fas fa-play play-icon"></i>
+                <a href="https://www.youtube.com/watch?v=mw-HaoCQe9U&ab_channel=RottenTomatoesTV" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
         <marquee behavior="alternate" direction="left" scrollamount="9"scrolldelay="38">
