--- a/Bridgerton.html
+++ b/Bridgerton.html
@@ -40,7 +40,7 @@
 
  <div class="video-info">
     <h2>Bridgerton</h2>
-    <p>Gjatë periudhës monarke në Angli, vëllezërit e motrat e familjes së fuqishme Bridgerton përpiqen të gjejnë dashurinë.</p>
+    <p>Gjat&euml; periudh&euml;s monarke n&euml; Angli, v&euml;llez&euml;rit e motrat e familjes s&euml; fuqishme Bridgerton p&euml;rpiqen të gjejn&euml; dashurin&euml;.</p>
  </div>
 </div>
 
