--- a/Frontier.html
+++ b/Frontier.html
@@ -39,7 +39,7 @@
 
  <div class="video-info">
     <h2>Frontier</h2>
-    <p>Tregtia e gëzofit në fund të viteve 1700 ishte një kohë lakmie, dhune dhe ambicie. Seriali Game of Thrones, seriali Turn, janë histori të dhunshme, por edhe Frontier tregon një nga historitë më të dhunshme për kontrollin e tregtisë së gëzofit. Historia e Frontier tregon për Declan Harp, një i jashtëligjshëm, i cili bën fushatë për të shtypur monopolin e një kompanie për tregtinë e gëzofit në Kanada.</p>
+    <p>Tregtia e g&euml;zofit n&euml; fund t&euml; viteve 1700 ishte nj&euml; koh&euml; lakmie, dhune dhe ambicie. Seriali Game of Thrones, seriali Turn, jan&euml; histori t&euml; dhunshme, por edhe Frontier tregon nj&euml; nga historit&euml; m&euml; t&euml; dhunshme p&euml;r kontrollin e tregtis&euml; s&euml; g&euml;zofit. Historia e Frontier tregon për Declan Harp, nj&euml; i jasht&euml;ligjsh&euml;m, i cili b&euml;n fushat&euml; p&euml;r t&euml; shtypur monopolin e nj&euml; kompanie p&euml;r tregtin&euml; e g&euml;zofit n&euml; Kanada.</p>
  </div>
 </div>
 
