--- a/Qasja.html
+++ b/Qasja.html
@@ -10,15 +10,15 @@
 <body style="font-family: 'Arial', sans-serif; background-color: rgba(0, 0, 0, 0.3); background-image: url('img/cinema.jpg'); background-size: cover; background-position: center;">
     <div class="login-form" style="background-color: rgba(0, 0, 0, 0.6); padding: 2rem; border-radius: 10px; max-width: 500px; margin: 5rem auto; box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1); color:white; position: relative;">
         <h3 class="fw-bold text-center mb-4">Qasja</h3>
-        <p class="text-center mb-5">Hyni ne llogarine tuaj</p>
+        <p class="text-center mb-5">Hyni ne llogarin&euml; tuaj</p>
 
         <form action="#">
             <div class="mb-3">
-                <label for="username" class="form-label">Emri i perdoruesit:</label>
+                <label for="username" class="form-label">Emri i p&euml;rdoruesit:</label>
                 <input type="text" class="form-control" id="username" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
             </div>
             <div class="mb-3">
-                <label for="password" class="form-label">Fjalekalimi:</label>
+                <label for="password" class="form-label">Fjal&euml;kalimi:</label>
                 <input type="password" class="form-control" id="password" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
             </div>
             <div class="mb-3 form-check">
@@ -29,7 +29,7 @@
         </form>
 
         <div class="text-center">
-            <small>Nuk keni nje llogari? <a href="Regjistrimi.html" class="btn-link fw-bold" style="color: rgb(162, 101, 220); text-decoration: none;">Regjistrohu</a></small>
+            <small>Nuk keni nj&euml; llogari? <a href="Regjistrimi.html" class="btn-link fw-bold" style="color: rgb(162, 101, 220); text-decoration: none;">Regjistrohu</a></small>
         </div>
     </div>
 </body>
