--- a/Regjistrimi.html
+++ b/Regjistrimi.html
@@ -194,22 +194,22 @@
     <div class="container">
         <div class="column1">
             <form id="form" class="form" onsubmit="return validateForm()">
-                <h2>Krijo llogarine tende</h2>
+                <h2>Krijo llogarin&euml; t&euml;nde</h2>
                 <div class="form-control">
-                    <label for="username">Emri i perdoruesit</label>
-                    <input type="text" id="username" placeholder="Shkruani emrin e perdoruesit" required>
+                    <label for="username">Emri i p&euml;rdoruesit</label>
+                    <input type="text" id="username" placeholder="Shkruani emrin e p&euml;rdoruesit" required>
                 </div>
                 <div class="form-control">
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="Shkruani email" required>
                 </div>
                 <div class="form-control">
-                    <label for="password">Fjalekalimi</label>
-                    <input type="password" id="password" placeholder="Shkruani fjalekalimin" required>
+                    <label for="password">Fjal&euml;kalimi</label>
+                    <input type="password" id="password" placeholder="Shkruani fjal&euml;kalimin" required>
                 </div>
                 <div class="form-control">
-                    <label for="password2">Konfirmo fjalekalimin</label>
-                    <input type="password" id="password2" placeholder="Shkruani fjalekalimin perseri " required>
+                    <label for="password2">Konfirmo fjal&euml;kalimin</label>
+                    <input type="password" id="password2" placeholder="Shkruani fjal&euml;kalimin p&euml;rs&euml;ri " required>
                 </div>
                 <button type="submit">Krijo</button>
             </form>
