--- a/SquidGame.html
+++ b/SquidGame.html
@@ -39,7 +39,7 @@
 
  <div class="video-info">
     <h2>Squid Game</h2>
-    <p>Disa lojtarë pranojnë një ftesë për të konkurruar në sfidën e litarit në këmbim të një çmimi joshës, por pasojat janë vdekjeprurëse.</p>
+    <p>Disa lojtar&euml; pranojn&euml; nj&euml; ftes&euml; p&euml;r t&euml; konkurruar në sfid&euml;n e litarit n&euml; k&euml;mbim t&euml; nj&euml; &ccedil;mimi josh&euml;s, por pasojat janë&euml; vdekjeprur&euml;se.</p>
  </div>
 </div>
 
