--- a/Umbrella.html
+++ b/Umbrella.html
@@ -39,7 +39,7 @@
 
  <div class="video-info">
     <h2>The Umbrella Academy</h2>
-    <p>Pasi kanë ndalur apokalipsin, anëtarët e Akademisë Umbrella kthehen në shtëpi, vetëm për të zbuluar se po jetojnë në një të ardhme alternative, në të cilën, ata vetë nuk kanë ekzistuar kurrë. Në vend të tyre, Reginald Hargreeves ka adoptuar një grup të ndryshëm fëmijësh me superfuqi dhe i quajti ata Akademia Sparrou. Tashmë, anëtarët e dy akademive, do të gjenden në një situatë që do të përpiqen ta zgjidhin sipas mënyrave të tyre...</p>
+    <p>Pasi kan&euml; ndalur apokalipsin, an&euml;tar&euml;t e Akademis&euml; Umbrella kthehen n&euml; sht&euml;pi, vet&euml;m p&euml;r t&euml; zbuluar se po jetojn&euml; n&euml; nj&euml; t&euml; ardhme alternative, n&euml; t&euml; cil&euml;n, ata vet&euml; nuk kan&euml; ekzistuar kurr&euml;. N&euml; vend t&euml; tyre, Reginald Hargreeves ka adoptuar nj&euml; grup t&euml; ndrysh&euml;m f&euml;mij&euml;sh me superfuqi dhe i quajti ata Akademia Sparrou. Tashm&euml;, an&euml;tar&euml;t e dy akademive, do t&euml; gjenden n&euml; nj&euml; situat&euml; q&euml; do t&euml; p&euml;piqen ta zgjidhin sipas m&euml;nyrave t&euml; tyre...</p>
  </div>
 </div>
 
