--- a/WalkingD.html
+++ b/WalkingD.html
@@ -39,7 +39,7 @@
 
  <div class="video-info">
     <h2>The Walking Dead</h2>
-    <p>Me Morganin në zonën e sigurt, Rik dhe të tjerët mendojnë një plan për të larguar një turmë të infektuarish nga Aleksandria, por diçka e vë gjithë komunitetin në rrezik.</p>
+    <p>Me Morganin n&euml; zon&euml;n e sigurt, Rik dhe t&euml; tjer&euml;t mendojn&euml; nj&euml; plan p&euml;r t&euml; larguar nj&euml; turm&euml; t&euml; infektuarish nga Aleksandria, por di&ccedil;ka e v&euml; gjith&euml; komunitetin n&euml; rrezik.</p>
  </div>
 </div>
 
