--- a/emilyinparis.html
+++ b/emilyinparis.html
@@ -207,13 +207,13 @@
                                             </div>
                                             <div class="title-info-synopsis-talent" data-uia="title-info-synopsis-talent">
                                                 <div class="title-info-synopsis" data-uia="title-info-synopsis">
-                                                    Pasi zbarkoi punën e saj të ëndrrave në Paris, drejtuese e marketingut në Çikago
-                                                    Emily Cooper përqafon jetën e saj të re aventureske ndërsa bën xhonglimin e punës,
-                                                     miq dhe romancë.
+                                                    Pasi zbarkoi pun&euml;n e saj t&euml; &euml;ndrrave n&euml; Paris, drejtuese e marketingut n&euml; &Ccedil;ikago
+                                                    Emily Cooper p&euml;rqafon jet&euml;n e saj t&euml; re aventureske nd&euml;rsa b&euml;n xhonglimin e pun&euml;s,
+                                                     miq dhe romanc&euml;.
                                                 </div>
                                                     <div class="title-info-talent">
                                                         <div class="title-data-info-item item-starring">
-                                                            <span class="title-data-info-item-label">Me protagonist:</span>
+                                                            <span class="title-data-info-item-label">Me protagonist&euml;:</span>
                                                             <span class="title-data-info-item-list" data-uia="info-starring">
                                                                 Lily Collins, Philippine Leroy-Beaulieu, Ashley Park</span>
                                                         </div>
@@ -239,12 +239,12 @@
                                 <div class="season season-active" data-uia="season-active">
                                     <div class="season-metadata">
                                         <div class="season-release-year" data-uia="season-release-year">
-                                            Viti i lëshimit: 2020
+                                            Viti i l&euml;shimit: 2020
                                         </div>
                                         <p class="season-synopsis" data-uia="season-synopsis">
-                                            Pasi zbarkoi punën e saj të ëndrrave në Paris, drejtuese e marketingut në Çikago
-                                            Emily Cooper përqafon jetën e saj të re aventureske ndërsa bën xhonglimin e punës,
-                                            miq dhe romancë.
+                                            Pasi zbarkoi pun&euml;n e saj t&euml; &euml;ndrrave n&euml; Paris, drejtuese e marketingut në &Ccedil;ikago
+                                            Emily Cooper p&euml;rqafon jet&euml;n e saj t&euml; re aventureske nd&euml;rsa b&euml;n xhonglimin e pun&euml;s,
+                                            miq dhe romanc&euml;.
                                         </p>
                                     </div>
                                         <ol class="episodes-container">
@@ -258,8 +258,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">30m</span>
                                                </div>
                                                <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                Emily sjell qëndrimin e saj të mundshëm amerikan dhe idetë e reja në zyrën e saj të re në Paris,
-                                                por paaftësia e saj për të folur frëngjisht rezulton të jetë një gabim i madh.</p>
+                                                Emily sjell q&euml;ndrimin e saj t&euml; mundsh&euml;m amerikan dhe idet&euml; e reja n&euml; zyr&euml;n e saj t&euml; re n&euml; Paris,
+                                                por paaft&euml;sia e saj p&euml;r t&euml; folur fr&euml;ngjisht rezulton t&euml; jet&euml; një&euml; gabim i madh.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -271,8 +271,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">27m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Emily lundron ndërlikimet e dashurisë franceze kur 
-                                                    entuziazmi në një mbrëmje pune i bën përshtypje një klienti flirtues dhe të martuar.</p>
+                                                    Emily lundron nd&euml;rlikimet e dashuris&euml; franceze kur 
+                                                    entuziazmi n&euml; nj&euml; mbr&euml;mje pune i b&euml;n p&euml;rshtypje nj&euml; klienti flirtues dhe t&euml; martuar.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -284,8 +284,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">27m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Emily shpreh shqetësimet e saj në lidhje me një fushatë të re reklamuese të rrezikshme, ndërsa përballet me problemet e hidraulikës,
-                                                    mësimet e gjuhës dhe kolegët e papëlqyeshëm.</p>
+                                                    Emily shpreh shqet&euml;simet e saj n&euml; lidhje me nj&euml; fushat&euml; t&euml; re reklamuese t&euml; rrezikshme, nd&euml;rsa p&euml;rballet me problemet e hidraulik&euml;s,
+                                                    m&euml;simet e gjuh&euml;s dhe koleg&euml;t e pap&euml;lqyesh&euml;m.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -297,8 +297,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">28m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Një njohje e re e ëmbël ndihmon Emily-n të nuhasë një klient të ri potencialisht të madh,
-                                                    por një ndërlidhje e çrregullt në vendin e punës e rrezikon marrëveshjen.</p>
+                                                    Nj&euml; njohje e re e &euml;mb&euml;l ndihmon Emily-n t&euml; nuhas&euml; nj&euml; klient t&euml; ri potencialisht t&euml; madh,
+                                                    por nj&euml; nd&euml;rlidhje e &ccedil;rregullt n&euml; vendin e pun&euml;s e rrezikon marr&euml;veshjen.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -310,8 +310,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">27m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Emily zbulon se ndjekja e saj në rritje në rrjetet sociale hap dyert në Paris,
-                                                    dhe një natë miqësore në qytet të çon në një takim me Gabrielin.</p>
+                                                    Emily zbulon se ndjekja e saj n&euml; rritje n&euml; rrjetet sociale hap dyert n&euml; Paris,
+                                                    dhe nj&euml; nat&euml; miq&euml;sore n&euml; qytet t&euml; &ccedil;on n&euml; nj&euml; takim me Gabrielin.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -323,8 +323,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">30m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Kur një takim me një shtëpi ikonë të modës zbulohet për një gabim themelor,
-                                                    Emily gjen ngushëllim në shoqërinë e një profesori në dukje simpatik.</p>
+                                                    Kur nj&euml; takim me nj&euml; sht&euml;pi ikon&euml; t&euml; mod&euml;s zbulohet p&euml;r nj&euml; gabim themelor,
+                                                    Emily gjen ngush&euml;llim n&euml; shoq&euml;rinë e nj&euml; profesori n&euml; dukje simpatik.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -336,8 +336,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">29m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Pasi pranon të kujdeset për një aktore amerikane në një event elegant në tapetin e kuq,
-                                                     nata e saj dhe akuza e saj e famshme del jashtë kontrollit.</p>
+                                                    Pasi pranon t&euml; kujdeset p&euml;r nj&euml; aktore amerikane n&euml; nj&euml; event elegant n&euml; tapetin e kuq,
+                                                     nata e saj dhe akuza e saj e famshme del jasht&euml; kontrollit.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -349,8 +349,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">30m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Udhëtimi i Emily-t në fundjavë në kështjellën e një shoqeje zien si shampanjë njëditore.
-                                                    Në Paris, takimi ngurrues i Mindy me miqtë e vjetër përfundon me një notë të lartë.</p>
+                                                    Udh&euml;timi i Emily-t n&euml; fundjav&euml; n&euml; k&euml;shtjell&euml;n e nj&euml; shoqeje zien si shampanj&euml; nj&euml;ditore.
+                                                    N&euml; Paris, takimi ngurrues i Mindy me miqt&euml; e vjet&euml;r p&euml;rfundon me nj&euml; not&euml; t&euml; lart&euml;.</p>
                                             </li>
                                             <li class="episode" data-uia="episode">
                                                 <figure class="episode-thumbnail" data-uia="episode-thumbnail">
@@ -362,8 +362,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">25m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Një ankand bamirësie, një fustan i dhuruar dhe një dyshe dizajni avangardë sjellin telashe
-                                                    për Emily-n teksa i bie në sy trashëgimtari i dukshëm i Pierre Cadault.
+                                                    Nj&euml; ankand bamir&euml;sie, nj&euml; fustan i dhuruar dhe nj&euml; dyshe dizajni avangard&euml; sjellin telashe
+                                                    p&euml;r Emily-n teksa i bie n&euml; sy trash&euml;gimtari i duksh&euml;m i Pierre Cadault.
                                                 </p>
                                             </li>
                                             <li class="episode" data-uia="episode">
@@ -376,8 +376,8 @@
                                                     <span class="episode-runtime" data-uia="episode-runtime">35m</span>
                                                 </div>
                                                 <p class="epsiode-synopsis" data-uia="episode-synopsis">
-                                                    Me punën e saj në linjë gjatë një debakli në Javën e Modës,
-                                                    Emily përpiqet të hartojë një plan të ri ndërsa përgatitet t'i thotë lamtumirën një miku të mirë.
+                                                    Me pun&euml;n e saj n&euml; linj&euml; gjat&euml; nj&euml; debakli n&euml; Jav&euml;n e Mod&euml;s,
+                                                    Emily p&euml;rpiqet t&euml; hartoj&euml; nj&euml; plan t&euml; ri nd&euml;rsa p&euml;rgatitet t'i thot&euml; lamtumir&euml;n nj&euml; miku t&euml; mir&euml;.
                                                 </p>
                                             </li>                               
                                          </ol>
