--- a/Flash.html
+++ b/Flash.html
@@ -39,7 +39,7 @@
 
  <div class="video-info">
     <h2>The Flash</h2>
-    <p>Nëntë muaj pas S.T.A.R Labs ka shpërthyer, Barri zgjohet për të gjetur fakte por diçka ka ndodhur që ai është në kome, me ndihmen e miqve te ti Barri duhet përpiqet me forcat e tij të gjej pronaret e S.T.A.R Labs.</p>
+    <p>N&euml;nt&euml; muaj pas S.T.A.R Labs ka shp&euml;rthyer, Barri zgjohet p&euml;r t&euml; gjetur fakte por diçka ka ndodhur q&euml; ai &euml;sht&euml; n&euml; kome, me ndihm&euml;n e miqve t&euml; tij Barri duhet p&euml;rpiqet me forcat e tij t&euml; gjej pronaret e S.T.A.R Labs.</p>
  </div>
 </div>
 
