--- a/serialet.html
+++ b/serialet.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
 
 
@@ -16,7 +17,12 @@
     height: 80px;
     background-color: none;
 }
-
+.audio {
+        display: none;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
 .navbar-container{
     display: flex;
     align-items: center;
@@ -70,8 +76,8 @@
                     <li class="menu-list-item"><a href="index.html">Ballina</a></li>
                     <li class="menu-list-item"><a href="filmat.html">Filmat</a></li>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
-                    <li class="menu-list-item"><a href="#meteshikuarat">Me te shikuarat</a></li>
-                    <li class="menu-list-item"><a href="#meterejat">Me te rejat</a></li>
+                    <li class="menu-list-item"><a href="#meteshikuarat">M&euml; t&euml; shikuarat</a></li>
+                    <li class="menu-list-item"><a href="#meterejat">M&euml; t&euml; rejat</a></li>
                 </ul>
             </div>
         </div>
@@ -96,8 +102,8 @@
             <div class="details">
                 <h3>Squid Game</h3>
                 <p>HD | 2021</p>
-                <p>Action/Survival/Drama</p>
-                <p>Rating: 8/10 | 1 season</p>
+                <p>Aksion/Dram&euml;</p>
+                <p>Vler&euml;simi: 8/10 | 1 sezon</p>
                 <a href="SquidGame.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -107,8 +113,8 @@
             <div class="details">
                 <h3>The Flash</h3>
                 <p>HD | 2014</p>
-                <p>Action/Drama</p>
-                <p>Rating: 7.5 | 4 seasons</p>
+                <p>Aksion/Dram&euml;</p>
+                <p>Vler&euml;simi: 7.5 | 4 sezone</p>
                 <a href="Flash.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -118,8 +124,8 @@
             <div class="details">
                 <h3>Frontier</h3>
                 <p>HD | 2016</p>
-                <p>Action/Adventure/Western</p>
-                <p>Rating: 7.1 | 3 seasons</p>
+                <p>Aksion/Aventur&euml;/Western</p>
+                <p>Vler&euml;simi: 7.1 | 3 sezone</p>
                 <a href="Frontier.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -129,8 +135,8 @@
             <div class="details">
                 <h3>The Walking Dead</h3>
                 <p>HD | 2010</p>
-                <p>Action/Drama/Horror</p>
-                <p>Rating: 8.1 | 11 seasons</p>
+                <p>Aksion/Dram&euml;/Horror</p>
+                <p>Vler&euml;simi: 8.1 | 11 sezone</p>
                 <a href="WalkingD.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -140,8 +146,8 @@
             <div class="details">
                 <h3>The Umbrella Academy</h3>
                 <p>HD | 2019</p>
-                <p>Action/Drama/Science fantasy</p>
-                <p>Rating: 7.9 | 11 seasons</p>
+                <p>Aksion/Dram&euml;/Shkenc&euml; fantazi</p>
+                <p>Vler&euml;simi: 7.9 | 11 sezone</p>
                 <a href="Umbrella.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -151,8 +157,8 @@
             <div class="details">
                 <h3>Bridgerton</h3>
                 <p>HD | 2020</p>
-                <p>Romance/Drama/Alternate history</p>
-                <p>Rating: 7.4 | 3 seasons</p>
+                <p>Romanc&euml;/Dram&euml;/Histori</p>
+                <p>Vler&euml;simi: 7.4 | 3 sezone</p>
                 <a href="Bridgerton.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -161,8 +167,8 @@
             <div class="details">
                 <h3>The Witcher</h3>
                 <p>HD | 2019</p>
-                <p>Aksion/Drama/Aventure</p>
-                <p>Rating: 8.0 | 3 seasons</p>
+                <p>Aksion/Dram&euml;/Aventur&euml;</p>
+                <p>Vler&euml;simi: 8.0 | 3 sezone</p>
                 <a href="https://www.youtube.com/watch?v=ndl1W4ltcmg&ab_channel=Netflix" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -171,8 +177,8 @@
             <div class="details">
                 <h3>Emily in Paris</h3>
                 <p>HD | 2019</p>
-                <p>Romance/Drama/Komedi</p>
-                <p>Rating: 6.9 | 3 seasons</p>
+                <p>Romanc&euml;/Dram&euml;/Komedi</p>
+                <p>Vler&euml;simi: 6.9 | 3 sezone</p>
                 <a href="emilyinparis.html">
                     <i class="fas fa-play play-icon"></i>
                 </a>
@@ -183,9 +189,13 @@
             <div class="details">
                 <h3>Stranger Things</h3>
                 <p>HD | 2016</p>
-                <p>Fantazi/Drama/Horror</p>
-                <p>Rating: 8.6 | 4 seasons</p>
-                <a href="https://www.youtube.com/watch?v=b9EkMc79ZSU&ab_channel=Netflix" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                <p>Fantazi/Dram&euml;/Horror</p>
+                <p>Vler&euml;simi: 8.6 | 4 sezone</p>
+               <i class="fas fa-play play-icon"onclick="toggleAudio('strangerAudio')"></i>
+                <audio class="audio" id="strangerAudio" controls>
+                    <source src="videos/Stranger Things Title Sequence [HD] Netflix [TubeRipper.com].mp3" type="audio/mp3">
+                    Your browser does not support the audio tag.
+                </audio>
             </div>
         </div>
         <div class="card">
@@ -193,9 +203,13 @@
             <div class="details">
                 <h3>Queen's Gambit</h3>
                 <p>HD | 2016</p>
-                <p>Fantazi/Drama/Horror</p>
-                <p>Rating: 8.6 | 4 seasons</p>
-                <a href="https://www.youtube.com/watch?v=oZn3qSgmLqI&ab_channel=RottenTomatoesTV" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                <p>Fantazi/Dram&euml;/Horror</p>
+                <p>Vler&euml;simi: 8.6 | 4 sezone</p>
+                <i class="fas fa-play play-icon"  onclick="toggleAudio('queenAudio')"></i>
+                <audio class="audio" id="queenAudio" controls>
+                    <source src="videos/Main Title by Carlos Rafael Rivera - The Queens Gambit [TubeRipper.com].mp3" type="audio/mp3">
+                    Your browser does not support the audio tag.
+                </audio>
             </div>
         </div>
         <div class="card">
@@ -203,8 +217,8 @@
             <div class="details">
                 <h3>Outer Banks</h3>
                 <p>HD | 2016</p>
-                <p>Fantazi/Drama/Horror</p>
-                <p>Rating: 8.6 | 4 seasons</p>
+                <p>Fantazi/Dram&euml;/Horror</p>
+                <p>Vler&euml;simi: 8.6 | 4 sezone</p>
                 <a href="https://www.youtube.com/watch?v=uk_hFfUFXh4&ab_channel=ZeroMedia" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -213,8 +227,8 @@
             <div class="details">
                 <h3>XO, Kitty</h3>
                 <p>HD | 2016</p>
-                <p>Fantazi/Drama/Horror</p>
-                <p>Rating: 8.6 | 4 seasons</p>
+                <p>Fantazi/Dram&euml;/Horror</p>
+                <p>Vler&euml;simi: 8.6 | 4 sezone</p>
                 <a href="https://www.youtube.com/watch?v=mw-HaoCQe9U&ab_channel=RottenTomatoesTV" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
         </div>
@@ -227,6 +241,17 @@
         </marquee>    
      </div>   
     </div>
+    
+    <script>
+        function toggleAudio(audioId) {
+            var audioElement = document.getElementById(audioId);
+            if (audioElement.paused) {
+                audioElement.play();
+            } else {
+                audioElement.pause();
+            }
+        }
+    </script>
         
 
 
