--- a/index.html
+++ b/index.html
@@ -18,13 +18,23 @@
             <div class="menu-container">
                 <ul class="menu-list">
                     <li class="menu-list-item fkryesore"><a href="index.html">Ballina</a></li>
-                    <li class="menu-list-item"><a href="filmat.html">Filmat</a></li>
+                    <li class="dropdown" id="filmat-dropdown">
+                        <div class="menu-list-item" id="filmat-link">Filmat</div>
+                        <div class="dropdown-content">
+                            <a href="filmat.html#animuar">Animuar</a>
+                            <a href="filmat.html#fantazi">Fantazi</a>
+                            <a href="filmat.html#aventure">Aventure</a>
+                            <a href="filmat.html#aksion">Aksion</a>
+                            <a href="filmat.html#mister">Mister</a>
+                            <a href="filmat.html#komedi">Komedi</a>
+                            <a href="filmat.html#sport">Sport</a>
+                        </div>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
                     <li class="menu-list-item"><a href="#meteshikuarat">M&euml; t&euml; shikuarat</a></li>
                     <li class="menu-list-item"><a href="#meterejat">M&euml; t&euml; rejat</a></li>
                 </ul>
             </div>
-
+            <script src="app.js"></script>
             <button onclick="logIn()">Qasja</button>
         </div>
     </div>
