--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a href="filmat.html#sport">Sport</a>
                         </div>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
-                    <li class="menu-list-item"><a href="#meteshikuarat">M&euml; t&euml; shikuarat</a></li>
+                    <li class="menu-list-item"><a href="meteshikuarat.html">M&euml; t&euml; shikuarat</a></li>
                     <li class="menu-list-item"><a href="#meterejat">M&euml; t&euml; rejat</a></li>
                 </ul>
             </div>
