--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </div>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
                     <li class="menu-list-item"><a href="meteshikuarat.html">M&euml; t&euml; shikuarat</a></li>
-                    <li class="menu-list-item"><a href="#meterejat">M&euml; t&euml; rejat</a></li>
+                    <li class="menu-list-item"><a href="meterejat.html">M&euml; t&euml; rejat</a></li>
                 </ul>
             </div>
             <script src="app.js"></script>
